- Updated stonecutter texture
- Updated Acacia, Birch, Jungle and Oak textures to better match the mod theme
- Bugfix: adjusted inventory logic for Slab Buildmode.  When placing slab thickness blocks the correct inventory amounts will be consumed.
- Bugfix: fixed double eighth blocks not placing correctly

- 0.0.25
- Bugfix: fixed major bug preventing startup of dedicated servers on last update 0.0.24

- 0.0.26
- Major Code Optimization (Removed over 10k lines of code and prevented another 30k+ by implementing a new system for registering blocks and generating data/assets.
This should allow for faster updates and easier maintenance of the mod going forward)
Added Bronze Armor and Tools
- Added a total of 134 new blocks!
- Current Mod Block Count is at 3,367
- Added more tags for mod compatibility
- Added Thatch
- Added Slate Tile
- Added 6 types of Wood Shingles
- Added all variants of 45 degree roofs
- Added all variants of 22 degree roofs
- Added all variants of 67 degree roofs
- Added all variants of roof peaks

- 0.0.27
- Added a total of 214 new blocks!
- Current Mod Block Count is at 3,581
- Renamed Stained Woods to Stained Stripped Woods to account for Stained Planks and better fit naming conventions
- Added the new wood variants to the Planks & Beams tab
- Experimenting with Plank and Shingle Textures in this update, please provide feedback on github or the discord server.
- Added all variants of Stained Acacia Planks, Stained Birch Planks, Stained Dark Oak Planks, Stained Jungle Planks, Stained Oak Planks and Stained Spruce Planks
- Added all stained variants of all Shingle Roofs
- There is a known bug with shadows/occlusion on the 67 degree roof blocks, this will be fixed asap.
- Added all current Kiln recipes
- All missing recipes will be added asap


- 0.0.28 (in progress)
- Removed Buildify Features from Caliber-Mod to add greater mod compatibility for Block Picker feature, added as a dependency/library for Caliber-Mod

