@@ -13,6 +13,10 @@
     "minecraft:iron_chestplate",
     "minecraft:iron_leggings",
     "minecraft:iron_boots",
+    "caliber:bronze_helmet",
+    "caliber:bronze_chestplate",
+    "caliber:bronze_leggings",
+    "caliber:bronze_boots",
     "minecraft:diamond_helmet",
     "minecraft:diamond_chestplate",
     "minecraft:diamond_leggings",
