@@ -16,6 +16,11 @@
     "minecraft:iron_shovel",
     "minecraft:iron_hoe",
     "minecraft:iron_sword",
+    "caliber:bronze_axe",
+    "caliber:bronze_pickaxe",
+    "caliber:bronze_shovel",
+    "caliber:bronze_hoe",
+    "caliber:bronze_sword",
     "minecraft:golden_axe",
     "minecraft:golden_pickaxe",
     "minecraft:golden_shovel",
